Fix code blocks on mobile

--- a/src/main/web/mobile.scss
+++ b/src/main/web/mobile.scss
@@ -289,6 +289,9 @@ select{
 		height: 42px;
 		line-height: 42px;
 	}
+	.postContent pre{
+		overflow-x: auto;
+	}
 }
 
 .postActions{
